# mangol

./: .gitignore  Cargo.toml
files/: perpMarkets.json
src/: main.rs
src/common/: Cargo.toml
src/common/src/: errors.rs  lib.rs
src/mailer/: Cargo.toml
src/mailer/src/: lib.rs
src/mango/: Cargo.toml
src/mango-macro/: Cargo.toml
src/mango-macro/src/: lib.rs
src/mango/src/: client.rs  error.rs  ids.rs  instructions.rs  lib.rs  types.rs  utils.rs
src/solana/: Cargo.toml
src/solana/src/: connection.rs  lib.rs
src/strategies/: Cargo.toml
src/strategies/src/: fib_trader.rs  lib.rs  watch_and_liquidate.rs  watch_mango_traders.rs
