[package]
name = "mangol"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-client = "1.10.25"
solana-sdk = "1.10.26"
solana-account-decoder = "1.10.24"
solana-program = "1.10.26"
itertools = "0.10.3"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
reqwest = "0.11.11"
borsh = "0.9.3"
num_enum = "0.5.7"
bytemuck = "1.7.3"
mangol-mango = { path = "./src/mango"}
mangol-solana = { path = "./src/solana"}
mangol-mailer = {path = "./src/mailer"}
mangol-strategies = {path = "./src/strategies"}
mangol-common = {path = "./src/common"}