[package]
name = "mangol-mango"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
solana-program = "1.9.25"
solana-sdk = "1.10.26"
arrayref = "^0.3.6"
serde = "^1.0.118"
bs58 = "0.4.0"
bytemuck = "^1.7.2"
bincode = "^1.3.1"
# higher versions of fixed don't work until rustc used by solana bpf is upgraded
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
enumflags2 = "^0.6.4"
num_enum = "^0.5.1"
thiserror = "^1.0.24"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
serum_dex = { rev = "7f55a5ef5f7937b74381a3124021a261cd7d7283", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
static_assertions = "^1.1.0"
safe-transmute = "^0.11.1"
pyth-client = {version = ">=0.5.0", features = ["no-entrypoint"]}

switchboard-program = ">=0.2.0"
switchboard-utils = ">=0.1.36"
mango-macro = { path = "../mango-macro" }
mangol-common = { path = "../common" }
mangol-solana = { path = "../solana" }

[dev-dependencies]
solana-program-test = ">=1.9.0"
solana-logger = ">=1.9.0"
tarpc = { version = "^0.26.2", features = ["full"] }
rand = "0.8.4"