[package]
name = "mangol-strategies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.10.26"
solana-account-decoder = "1.10.26"
solana-transaction-status = "1.11.0"
solana-sdk = "1.10.26"
base64 = "0.20.0-alpha.1"
itertools = "0.10.3"
colored = "2.0.0"
mangol-mango = { path = "../mango"}
mangol-solana = { path = "../solana"}
mangol-mailer = { path = "../mailer"}
mangol-common = { path = "../common"}
num-traits = "0.2.15"